<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_play"
            android:title="@string/play_item"
            android:icon="@drawable/ic_play"/>
        <item
            android:id="@+id/item_score"
            android:title="@string/score_item"
            android:icon="@drawable/ic_star"/>
        <item
            android:id="@+id/item_creation"
            android:title="@string/add_question_item"/>
        <item
            android:id="@+id/item_infos"
            android:title="@string/infos_item"
            android:icon="@drawable/ic_info"/>
        <item
            android:id="@+id/item_settings"
            android:title="@string/settings_item"
            android:icon="@drawable/ic_settings"/>

        <!--item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" /-->
    </group>

    <!--item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item-->

</menu>
